crates/graphcal-eval/tests/snapshots/error_snapshots__error_nearest_key_wrong_dimension.snap
---
source: crates/graphcal-eval/tests/error_snapshots.rs
expression: rendered
---
dimension mismatch: expected Time, found Length
    Diagnostic severity: error
Begin snippet for nearest_key_wrong_dimension.gcl starting at line 3, column 1

snippet line 3: 
snippet line 4: node k: Key<TimeStep> = nearest_key(TimeStep, 1.0 m);
    label at line 4, columns 47 to 51: has dimension Length
diagnostic help: nearest_key() takes a quantity in the axis dimension
diagnostic code: graphcal::D001
