crates/graphcal-eval/tests/snapshots/error_snapshots__error_negative_tolerance_relative.snap
---
source: crates/graphcal-eval/tests/error_snapshots.rs
assertion_line: 318
expression: rendered
---
negative tolerance in tolerance assertion
    Diagnostic severity: error
Begin snippet for negative_tolerance_relative.gcl starting at line 4, column 1

snippet line 4: 
snippet line 5: assert exact = @x ~= 1.0 +/- -5 %;
    label at line 5, columns 30 to 31: tolerance is -5
diagnostic help: the tolerance in `~= expected +/- tolerance` must be non-negative; use `0` for exact-match semantics
diagnostic code: graphcal::A015
