crates/graphcal-eval/tests/snapshots/error_snapshots__error_non_exhaustive_index_match.snap
---
source: crates/graphcal-eval/tests/error_snapshots.rs
expression: rendered
---
non-exhaustive match: variant `Maneuver#Insertion` not covered
    Diagnostic severity: error
Begin snippet for non_exhaustive_index_match.gcl starting at line 4, column 1

snippet line 4: param result: Dimensionless[Maneuver] = for m: Maneuver {
snippet line 5:     match m {
    label starting at line 5, column 5: error here
snippet line 6:         Maneuver#Departure => 1.0,
snippet line 7:         Maneuver#Correction => 2.0,
snippet line 8:     }
    label ending at line 8, column 5: error here
snippet line 9: };
diagnostic code: graphcal::E001
