crates/graphcal-eval/tests/snapshots/error_snapshots__error_non_literal_exponent.snap
---
source: crates/graphcal-eval/tests/error_snapshots.rs
assertion_line: 342
expression: rendered
---
a dimensioned base requires a statically exact rational exponent
    Diagnostic severity: error
Begin snippet for non_literal_exponent.gcl starting at line 2, column 1

snippet line 2: param n: Dimensionless = 2.0;
snippet line 3: node bad: Area = @x ^ @n;
    label at line 3, columns 23 to 24: runtime exponent cannot determine the result dimension
diagnostic help: use an exact integer such as `2` or a parenthesized rational such as `(3/2)`
diagnostic code: graphcal::D005
